[gd_scene load_steps=3 format=3 uid="uid://dv74878ff5j61"]

[ext_resource type="Script" uid="uid://bgrfyn5wg5u70" path="res://weapons/area_damager.gd" id="1_4xoo6"]
[ext_resource type="AudioStream" uid="uid://d0abiucn7ieu8" path="res://assets/sfx/explosion/Explosion_Light_Nuc.ogg" id="2_32nne"]

[node name="ara_damager" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_4xoo6")

[node name="tmr_apply_damage" type="Timer" parent="."]
wait_time = 0.05

[node name="asp_explode_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_32nne")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="tmr_apply_damage" to="." method="_on_tmr_apply_damage_timeout"]
